--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@500&display=swap');
+
+h5 {
+  font-family: 'Rock Salt', cursive;
+  font-size: 16px;
+  margin-top: 100px;
+  color: rgb(142, 154, 226);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-family: 'Newsreader', serif;
+  font-size: 65px;
+}
+
+p {
+  font-family: 'Newsreader', serif;
+  font-size: 20px;
+}
+
+h4 {
+  font-family: 'Newsreader', serif;
+  margin-top: 40px;
+  font-size: 30px;
+}
+
+.input-group-text {
+  padding-left: 0;
+}
+
+.input-group-text, .form-control {
+  font-family: 'Newsreader', serif;
+  border-color: transparent;
+  background-color: transparent;
+  font-size: 30px;
+  color: #212529;
+}
+
+.input-group {
+  margin-bottom: 20px;
+}
+
+.input-group > .form-control {
+  border-bottom-color: grey;
+  text-align: center;
+}
+
+.input-group > .form-control:focus {
+  border-bottom-color: grey;
+  outline: none;
+  box-shadow: none;
+  border-color: transparent;
+  border-bottom-color: grey;
+}
+
+h4 span {
+  font-weight: bold;
+  color: green;
+}
+
+h4.result {
+  font-size: 45px;
+  padding: 20px;
+  background: linear-gradient(104deg, rgba(130, 255, 173,0) 0.9%, rgba(130, 255, 173,1.25) 2.4%, rgba(130, 255, 173,0.5) 5.8%, rgba(130, 255, 173,0.1) 93%, rgba(130, 255, 173,0.7) 96%, rgba(130, 255, 1732,0) 98%), linear-gradient(183deg, rgba(130, 255, 173,0) 0%, rgba(130, 255, 173,0.3) 7.9%, rgba(130, 255, 173,0) 15%);
 }
